# quaff

./: .gitignore  CMakeLists.txt
attic/: quaff.hpp
attic/core/: core.hpp
attic/core/language/: language.hpp
attic/core/language/code/: code.hpp  generator.hpp
attic/core/language/code/instructions/: implement.hpp  instruction_call.hpp  instruction_farm.hpp  instruction_recv.hpp  instruction_repeat.hpp  instruction_send.hpp  instructions.hpp
attic/core/language/code/network/: descriptor.hpp  network.hpp  process_network.hpp  processus.hpp
attic/core/language/dsl/: dsl.hpp  scm.hpp  tags.hpp
attic/core/language/function/: function.hpp  pardo.hpp  pipeline.hpp  register.hpp  scm.hpp
attic/core/language/grammar/: definition.hpp  domain.hpp  grammar.hpp  tags.hpp
attic/core/language/semantic/: apply_rule.hpp  common.hpp  environnement.hpp  rule_link.hpp  rule_master.hpp  rule_par.hpp  rule_pipe.hpp  rule_seq.hpp  rule_single.hpp  rule_worker.hpp  semantic.hpp
attic/core/language/semantic/tools/: is_inside.hpp  link.hpp  list_of.hpp  prefix.hpp  splice.hpp  suffix.hpp  tools.hpp
attic/core/language/syntax/: make.hpp  probe.hpp  run.hpp  seq.hpp  syntax.hpp
attic/core/marker/: data.hpp  marker.hpp  remanent.hpp  updater.hpp
attic/core/runtime/: runtime.hpp
attic/core/runtime/mpi/: base.hpp  communication.hpp
attic/core/types/: adaptator.hpp  adaptators.hpp  arguments.hpp  count.hpp  selection.hpp  tuple.hpp  types.hpp
attic/support/: config.hpp  configure.hpp  support.hpp  version.hpp
attic/support/config/: arch.hpp  compiler.hpp  config.hpp  mpi.hpp  platform.hpp  std.hpp
attic/support/config/arch/: none.hpp  powerpc.hpp  x86.hpp
attic/support/config/compiler/: gcc.hpp  gcc_xml.hpp  none.hpp  visualc.hpp
attic/support/config/mpi/: mpich.hpp  openmpi.hpp
attic/support/config/platform/: macos.hpp  nix.hpp  none.hpp  windows.hpp
attic/support/config/stdlib/: string.hpp
cmake/: bootstrap.hpp.cmake  quaff.boost.cmake  quaff.mpi.cmake  quaff.openmp.cmake  quaff.pthread.cmake
include/quaff/: quaff.hpp
include/quaff/core/: backend.hpp
include/quaff/core/backend/: backend.hpp  forward.hpp  instructions.hpp  runtime.hpp
include/quaff/core/backend/debug/: backend.hpp  runtime.hpp
include/quaff/core/backend/debug/instructions/: call.hpp  receive.hpp  send.hpp
include/quaff/core/backend/graph/: backend.hpp  runtime.hpp
include/quaff/core/backend/graph/instructions/: call.hpp  receive.hpp  send.hpp
include/quaff/core/backend/mpi/: backend.hpp
include/quaff/core/backend/print/: backend.hpp
include/quaff/core/backend/print/instructions/: call.hpp  receive.hpp  send.hpp
include/quaff/core/backend/sequential/: backend.hpp  runtime.hpp
include/quaff/core/backend/sequential/instructions/: call.hpp  receive.hpp  send.hpp
include/quaff/core/dsl/: domain.hpp  expression.hpp  grammar.hpp  semantic.hpp  terminal.hpp
include/quaff/core/models/: process_network.hpp
include/quaff/core/models/process_network/: .directory  accept.hpp  chain_network.hpp  concat_network.hpp  descriptor.hpp  empty.hpp  environment.hpp  farmer_process.hpp  forward.hpp  join_network.hpp  joint_network.hpp  joint_process.hpp  network.hpp  pid.hpp  process.hpp  transform.hpp
include/quaff/core/models/process_network/semantic/: apply_rule.hpp  environment.hpp  rule_farm.hpp  rule_pardo.hpp  rule_pardoer.hpp  rule_pipe.hpp  rule_seq.hpp
include/quaff/core/models/process_network/semantic/details/: pipe.hpp
include/quaff/core/skeleton/: farm.hpp  pardo.hpp  pardoer.hpp  pipe.hpp  seq.hpp  sink.hpp  source.hpp
include/quaff/sdk/: ignore_unused.hpp  preprocessor.hpp  type_id.hpp  version.hpp  versioning.hpp
include/quaff/sdk/dsl/: compile.hpp  from_domain.hpp
include/quaff/sdk/dsl/proto/: extends.hpp  unpack.hpp
include/quaff/sdk/meta/: action.hpp  is_callable.hpp  is_input.hpp  is_output.hpp  name_of.hpp  named_action.hpp  named_sink.hpp  named_source.hpp  push_back.hpp  push_front.hpp  run.hpp  sink.hpp  source.hpp  strip.hpp  transform_if.hpp  union.hpp
src/core/: backend.cpp
src/sdk/: version.cpp
unit/: CMakeLists.txt  action.cpp  environment.cpp  grammar.cpp  is_input.cpp  is_output.cpp  pardo.cpp  pipe.cpp  process_network.cpp  seq.cpp
